@@ -1,0 +1,36 @@
+/*
+ * Copyright 2010 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package samples.hashcode;
+
+import java.util.HashMap;
+
+public class HashCodeInitializedInCtor {
+    private final HashMap<String, String> hash;
+
+    public HashCodeInitializedInCtor() {
+        hash = new HashMap<String, String>();
+    }
+
+    public static HashCodeInitializedInCtor newFaults() {
+        HashCodeInitializedInCtor fault = new HashCodeInitializedInCtor();
+        return fault;
+    }
+
+    public final int hashCode() {
+        return hash.hashCode();
+    }
+
+}
